# site-archiver

./: .gitignore  README.md  SiteArchiver.cabal
src/: SiteArchiver.hs
src/SiteArchiver/: DataStore.hs  JobRunner.hs  SiteCrawler.hs  Types.hs  Url.hs
web/: bower.json  gulpfile.js  package.json
web/scripts/: app.js
web/scripts/controllers/: home-controller.js  site-controller.js
web/scripts/providers/: job-resource.js  site-resource.js  url-service.js
web/static/: index.html
web/static/partials/: home.html  site.html
web/styles/: Site.scss  _settings.scss
