name:                SiteArchiver
version:             0.1.0.0
license-file:        LICENSE
author:              Ian Sullivan
maintainer:          iansullivan88@gmail.com
category:            Web
build-type:          Simple
cabal-version:       >=1.10

executable SiteArchiver
  hs-source-dirs:  src
  main-is:         SiteArchiver.hs
  build-depends:       base         >= 4.7 && <4.8,
                       network-uri  == 2.6.0.*,
                       HDBC-sqlite3 == 2.3.3.*,
                       HDBC         == 2.4.0.*,
                       filepath     == 1.4.0.*,
                       directory    == 1.2.3.*,
                       threads-pool == 0.1.*,
                       HTTP         == 4000.2.*,
                       bytestring   == 0.10.*,
                       cryptohash   == 0.11.*,
                       time         == 1.5.0.*,
                       mtl          == 2.2.*,
                       containers   == 0.5.6.*,
                       tagsoup      == 0.13.*,
                       scotty       == 0.10.*,
                       text         == 1.2.1.*,
                       wai-middleware-static == 0.7.0.*,
                       transformers == 0.4.3.*,
                       http-types   == 0.8.*,
                       split        == 0.2.2.*,
                       tagsoup      == 0.13.*,
                       aeson        == 0.9.0.*

  default-language:    Haskell2010
